--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 root = true
 
-[*.{ts,svelte,css,json}]
+[*.{ts,svelte,css,json,js}]
     indent_size = 2
     indent_style = space
     insert_final_newline = true
