--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,40 +4,40 @@
   "description": "A multiplatform entertainment, emote management, and utility chatbot.",
   "icons": [
     {
-      "src": "/favicon-96x96.png",
+      "src": "/dashboard/favicon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/favicon.svg",
+      "src": "/dashboard/favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml"
     },
     {
-      "src": "/favicon.ico",
+      "src": "/dashboard/favicon.ico",
       "sizes": "48x48",
       "type": "image/x-icon"
     },
     {
-      "src": "/apple-touch-icon.png",
+      "src": "/dashboard/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/web-app-manifest-192x192.png",
+      "src": "/dashboard/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/web-app-manifest-512x512.png",
+      "src": "/dashboard/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "start_url": "/",
+  "start_url": "/dashboard/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#7c3aed",
