--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -22,7 +23,7 @@
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
 		"daisyui": "^4.12.23",
-		"eslint": "^9.18.0",
+		"eslint": "^9.24.0",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
 		"lucide-svelte": "^0.473.0",
